--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,7 @@
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/tour.scss";
+@import "./blocks/card.scss";
+@import "./blocks/title.scss";
+@import "./blocks/wrapper";
