--- a/src/sass/blocks/card.scss
+++ b/src/sass/blocks/card.scss
@@ -26,10 +26,12 @@
 
 .card__item {
   position: relative;
+  overflow: hidden;
   background: linear-gradient(360deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.06) 48.44%, rgba(0, 0, 0, 0.5) 100%);
   border-radius: 20px;
   height: 100%;
   width: 100%;
+  cursor: pointer;
 
   @include tablet {
     border-radius: 50px;
@@ -63,6 +65,7 @@
     font-weight: 500;
     font-size: 35px;
     line-height: 43px;
+    letter-spacing: 0;
   }
 }
 
@@ -80,6 +83,10 @@
   }
 }
 
+.form__select {
+  appearance: none;
+}
+
 // Button
 
 .card__button {
@@ -93,11 +100,18 @@
   cursor: pointer;
   margin-top: 175px;
   z-index: 3;
+  max-width: 200px;
 
   @include tablet {
-    margin-top: 320px;
+    padding: 5px 0;
+    margin-top: 315px;
     font-size: 23px;
     line-height: 28px;
+  }
+
+  &:focus-visible {
+    outline: 2px solid rgb(221, 160, 221);
+    outline-offset: 2px;
   }
 }
 
@@ -111,18 +125,40 @@
   @include overlay;
   z-index: -1;
   position: absolute;
-  overflow: hidden;
   border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  transform: scale(1);
+  transition: 300ms ease;
+
+  @include tablet {
+    border-radius: 50px;
+  }
+
+  &:focus-visible {
+    outline: 3px solid rgb(221, 160, 221);
+    outline-offset: 2px;
+  }
+}
+
+.card__link img {
   width: 100%;
   height: 318px;
 
   @include tablet {
-    width: 100%;
     height: 100%;
-    border-radius: 50px;
   }
 }
 
-// .card__link img {
+.card__item:hover .card__link {
+  transform: scale(1.2);
+  cursor: pointer;
+  transition: 300ms ease;
+}
 
-// }
+.card__item:hover .card__button {
+  background-color: $basic-green;
+  border-radius: 50px;
+  padding: 5px 20px;
+  transition: 300ms ease;
+}
