--- a/src/sass/blocks/tour.scss
+++ b/src/sass/blocks/tour.scss
@@ -13,7 +13,9 @@
   grid-template-rows: 1fr 1fr;
   gap: 10px;
   font-size: 16px;
+  margin: auto;
   margin-bottom: 50px;
+  width: 318px;
 
   @include tablet {
     font-size: 23px;
@@ -21,6 +23,7 @@
     grid-template-columns: repeat(5, min-content);
     gap: 30px;
     grid-template-rows: min-content;
+    width: 100%;
   }
 }
 
@@ -47,5 +50,21 @@
   &--current {
     color: $basic-orange;
     border-bottom: 2px solid $basic-orange;
+  }
+
+  @media (any-hover: hover) {
+    &:hover {
+      border-bottom: 2px solid $basic-black;
+    }
+  }
+
+  &:focus-visible {
+    outline: 2px solid rgb(221, 160, 221);
+    outline-offset: 2px;
+  }
+
+  &:active {
+    color: rgb(0, 0, 0, 0.3);
+    border-color: rgb(0, 0, 0, 0.3);
   }
 }
