--- a/src/sass/blocks/photo.scss
+++ b/src/sass/blocks/photo.scss
@@ -24,21 +24,69 @@
   &:not(:last-child) {
     margin-bottom: 18px;
   }
+
+  @include tablet {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @include desktop {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+  }
+
+  &--big {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    min-height: 110px;
+
+    @include tablet {
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+    }
+
+    @include desktop {
+      grid-template-columns: repeat(5, 1fr);
+      gap: 30px;
+    }
+  }
 }
 
 .photo__item {
   width: 100%;
   height: 110px;
+
+  @include tablet {
+    height: 301px;
+  }
+
+  &--hidden {
+    display: none;
+
+    @include desktop {
+      display: block;
+    }
+  }
+
+  &--close {
+    display: none;
+
+    @include tablet {
+      display: block;
+    }
+  }
 }
 
 .photo__item img {
   border-radius: 20px;
   width: 100%;
   height: 100%;
-}
 
-.photo__list--two {
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
-  min-height: 110px;
+  @include tablet {
+    border-radius: 50px;
+  }
 }
