--- a/src/sass/blocks/navigation.scss
+++ b/src/sass/blocks/navigation.scss
@@ -5,9 +5,10 @@
   width: 100%;
   padding: 20px;
   min-height: 31px;
+  color: var(--_basic-white);
 
   a {
-    color: var(--_basic-white);
+    color: inherit;
     text-decoration: none;
     font-size: 16px;
     font-weight: 400;
@@ -20,6 +21,29 @@
     a {
       font-size: 20px;
       line-height: 28px;
+    }
+  }
+
+  &--scroll {
+    position: fixed;
+    background: rgba(243, 239, 232, 0.6);
+    backdrop-filter: blur(27px);
+    z-index: 99;
+    color: var(--_basic-black);
+
+    .navigation__phone {
+      font-size: 20px;
+    }
+
+    .navigation__phone,
+    .navigation__link {
+      //  stylelint-disable-next-line
+      &:hover {
+        //  stylelint-disable-next-line
+        &::after {
+          background-color: var(--_basic-black);
+        }
+      }
     }
   }
 }
@@ -56,33 +80,44 @@
   display: inline-block;
   position: relative;
 
+  &::after {
+    content: "";
+    position: absolute;
+    height: 1px;
+    background-color: var(--_basic-white);
+    width: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: width, opacity, 0.5s ease;
+  }
+
   &:hover {
     &::after {
-      content: "";
-      position: absolute;
-      height: 1px;
-      background-color: var(--_basic-white);
       width: 100%;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-top: 5px;
+      opacity: 1;
     }
   }
 }
 
 .navigation__logo {
   display: flex;
+  height: 22px;
+  width: 133px;
 
   a {
-    height: 22px;
-
-    @include tablet {
-      height: 30px;
-      width: 181px;
+    svg {
+      width: 100%;
+      height: 100%;
     }
+  }
 
-    img {
+  @include tablet {
+    height: 30px;
+    width: 181px;
+
+    svg {
       width: 100%;
       height: 100%;
     }
