--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -2,7 +2,11 @@
 
 .header {
   display: flex;
-  min-height: 831px;
+  min-height: 488px;
+
+  @include tablet {
+    min-height: 831px;
+  }
 }
 
 .header__inner {
@@ -22,6 +26,7 @@
 
   h1 {
     margin: 0;
+    margin-top: 85px;
     margin-bottom: 40px;
     font-size: 34px;
     font-weight: 700;
@@ -39,12 +44,12 @@
     margin: 0;
     font-size: 16px;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 22px;
     color: var(--_basic-white);
     margin-bottom: 40px;
     text-align: center;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
     max-width: 602px;
   }
 
