--- a/src/sass/globals/reboot.scss
+++ b/src/sass/globals/reboot.scss
@@ -18,7 +18,7 @@ img {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Robot", sans-serif;
+  font-family: "Roboto", "Aria", sans-serif;
   font-size: 13px;
   line-height: 1em;
   min-height: 360px;
@@ -49,4 +49,49 @@ section {
       line-height: 73px;
     }
   }
+}
+
+
+.title-content {
+  margin: 0 auto;
+  max-width: 750px;
+  margin-bottom: 40px;
+  width: 100%;
+
+  p {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    color: var(--_gray);
+    text-align: center;
+  }
+
+  @include tablet {
+    margin-bottom: 100px;
+
+    p {
+      padding-left: 150px;
+      padding-right: 150px;
+      font-size: 20px;
+      line-height: 28px;
+    }
+  }
+}
+
+a {
+  font-family: inherit;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
