--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,8 +6,15 @@
 @import "./globals/reboot.scss";
 
 // Blocks
+@import "./blocks/button.scss";
 @import "./blocks/container.scss";
 @import "./blocks/header.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/tour.scss";
 @import "./blocks/tour-card.scss";
+@import "./blocks/form.scss";
+@import "./blocks/reviews.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/stories.scss";
+@import "./blocks/connection.scss";
+@import "./blocks/footer.scss";
