--- a/src/sass/blocks/tour.scss
+++ b/src/sass/blocks/tour.scss
@@ -14,7 +14,7 @@
 
 // Content
 
-.tour__contet {
+.tour__content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -101,3 +101,36 @@
   }
 }
 
+.tour__card__list {
+  @include overlay;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(318px, 1fr));
+  gap: 18px;
+
+  @include tablet {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include desktop {
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.tour__card {
+  padding: 25px;
+  min-height: 318px;
+
+  @include tablet {
+    min-height: 531px;
+    padding: 50px;
+  }
+}
+
+.tour__card-header h3 {
+  margin-bottom: 13px;
+
+  @include tablet {
+    margin-bottom: 16px;
+  }
+}
