--- a/src/sass/blocks/stories.scss
+++ b/src/sass/blocks/stories.scss
@@ -14,116 +14,42 @@
   }
 }
 
-// Item
+// Card
 
-.stories__item {
-  position: relative;
-  display: flex;
+.stories__card {
   padding: 30px;
   min-height: 455px;
-  overflow: hidden;
-  border-radius: 20px;
-  cursor: pointer;
-
-
-  article {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transform: scale(1);
-    transition: transform, 0.3s ease;
-  }
 
   @include tablet {
-    border-radius: 50px;
     padding: 60px;
-    min-height: 567px;
+    min-height: 561px;
   }
-}
-
-@media (any-hover: hover) {
-  .stories__item:hover {
-    img {
-      transform: scale(1.2);
-    }
-
-    .stories__card-footer__link {
-      background-color: var(--_green);
-    }
-  }
-}
-
-.stories__item:active {
-  .stories__card-footer__link {
-    background-color: var(--_orange);
-  }
-}
-
-.stories__card__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0.01%, rgba(0, 0, 0, 0.2) 100%);
-  z-index: 1;
 }
 
 .stories__card-header {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  color: var(--_basic-white);
-  z-index: 3;
-  max-width: 554px;
+  max-width: 570px;
+}
 
-  h3 {
-    margin: 0;
-    margin-bottom: 20px;
-    font-size: 23px;
-    font-weight: 700;
-    line-height: 27px; /* 27.6px */
-    letter-spacing: 0.92px;
-    color: inherit;
-  }
-
-  p {
-    margin: 0;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 22px;
-    color: inherit;
-    margin-bottom: 20px;
-  }
+.stories__card-header h3 {
+  margin-bottom: 20px;
 
   @include tablet {
-    h3 {
-      margin-bottom: 37px;
-      font-size: 35px;
-      font-weight: 500;
-      line-height: 46px;
-    }
+    margin-bottom: 37px;
+  }
+}
 
-    p {
-      font-size: 20px;
-      font-weight: 400;
-      line-height: 28px;
-      margin-bottom: 28px;
-    }
+.stories__card-header p {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: var(--_basic-white);
+
+  @include tablet {
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 28px;
   }
 }
 
@@ -161,41 +87,7 @@
 }
 
 .stories__card-footer {
-  width: 100%;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
-}
-
-.stories__card-footer__link {
-  padding: 7px 20px;
-  border-radius: 50px;
-  display: inline-flex;
-  align-items: center;
-  gap: 15px;
-  text-decoration: none;
-  background-color: transparent;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 22px;
-  position: relative;
-  z-index: 9;
-  color: var(--_basic-white);
-  transform: translateX(-20px);
-  cursor: pointer;
-
-  @include tablet {
-    font-size: 23px;
-    line-height: 28px;
-  }
-
-  &:hover {
-    background-color: var(--_green);
-  }
-
-  &:active {
-    background-color: var(--_orange);
-  }
 }
 
 .stories__card-footer ul {
