--- a/src/sass/blocks/connection.scss
+++ b/src/sass/blocks/connection.scss
@@ -1,5 +1,13 @@
 //Connection
 
+.connection {
+  padding-top: 75px;
+
+  @include tablet {
+    padding-top: 135px;
+  }
+}
+
 .connection__logo {
   width: 130px;
   height: 133px;
@@ -38,9 +46,8 @@
     text-align: center;
     margin: 0;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 24px;
     color: var(--_gray);
   }
 
@@ -69,6 +76,7 @@
       font-size: 35px;
       font-weight: 500;
       line-height: 42px;
+      letter-spacing: 0;
     }
 
     p {
