--- a/src/sass/blocks/container.scss
+++ b/src/sass/blocks/container.scss
@@ -1,10 +1,10 @@
 // Container
 
-.conteiner {
+.container {
   width: 100%;
   padding: 0 21px;
   margin: 0 auto;
-  max-width: 1170px;
+  max-width: 1200px;
 
   @include tablet {
     padding: 0 53px;
