--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -10,7 +10,7 @@
 }
 
 .header__inner {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%), url("../img/bg-header.jpg");
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%), url("../../img/bg-header.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -27,7 +27,7 @@
   h1 {
     margin: 0;
     margin-top: 85px;
-    margin-bottom: 40px;
+    margin-bottom: 42px;
     font-size: 34px;
     font-weight: 700;
     line-height: 38px;
@@ -80,7 +80,7 @@
       font-size: 96px;
       line-height: 104px;
       letter-spacing: 1.92px;
-      margin-bottom: 50px;
+      margin-bottom: 55px;
     }
 
     p {
