--- a/src/sass/blocks/stories.scss
+++ b/src/sass/blocks/stories.scss
@@ -1,5 +1,33 @@
 // Stories
 
+.stories {
+  padding-top: 75px;
+
+  @include tablet {
+    padding-top: 135px;
+  }
+}
+
+
+.stories__title-wrapper {
+  margin: 0 auto;
+  max-width: 750px;
+  margin-bottom: 51px;
+  width: 100%;
+
+  @include tablet {
+    margin-bottom: 98px;
+  }
+}
+
+.stories__title {
+  margin-bottom: 22px;
+
+  @include tablet {
+    margin-bottom: 30px;
+  }
+}
+
 
 // List
 
@@ -22,7 +50,7 @@
 
   @include tablet {
     padding: 60px;
-    min-height: 561px;
+    min-height: 567px;
   }
 }
 
@@ -31,7 +59,8 @@
 }
 
 .stories__card-header h3 {
-  margin-bottom: 20px;
+  margin-bottom: 22px;
+  padding-right: 100px;
 
   @include tablet {
     margin-bottom: 37px;
@@ -40,10 +69,10 @@
 
 .stories__card-header p {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   font-size: 16px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 23px;
   color: var(--_basic-white);
 
   @include tablet {
@@ -74,6 +103,14 @@
       top: 50%;
       transform: translateY(-50%);
       left: 10px;
+    }
+
+    @include tablet {
+      padding-left: 30px;
+
+      &::before {
+        left: 11px;
+      }
     }
   }
 
