--- a/src/sass/blocks/tour.scss
+++ b/src/sass/blocks/tour.scss
@@ -1,14 +1,18 @@
 // Tour
 
 .tour {
-  h2 {
-    margin-bottom: 30px;
-  }
+  padding-top: 75px;
 
   @include tablet {
-    h2 {
-      margin-bottom: 35px;
-    }
+    padding-top: 135px;
+  }
+}
+
+.tour__title {
+  margin-bottom: 31px;
+
+  @include tablet {
+    margin-bottom: 36px;
   }
 }
 
@@ -20,6 +24,14 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 50px;
+
+  @include tablet {
+    margin-bottom: 105px;
+  }
+
+  @include desktop {
+    margin-bottom: 107px;
+  }
 }
 
 // List
@@ -56,10 +68,10 @@
 // Link
 
 .tour__link {
+  display: inline-block;
   position: relative;
   text-decoration: none;
   color: var(--_basic-black);
-  padding-bottom: 6px;
   cursor: pointer;
 
   &::after {
@@ -89,6 +101,13 @@
       transform: translateX(-50%);
       opacity: 1;
     }
+
+    @include tablet {
+      &::after {
+        bottom: -5px;
+      }
+    }
+
   }
 
   @media (any-hover: hover) {
@@ -130,7 +149,7 @@
 }
 
 .tour__card-header h3 {
-  margin-bottom: 13px;
+  margin-bottom: 15px;
 
   @include tablet {
     margin-bottom: 16px;
