--- a/src/sass/blocks/form.scss
+++ b/src/sass/blocks/form.scss
@@ -144,7 +144,7 @@
   }
 
   &:focus-visible {
-    border: 1px solid var(--Gray-300, #A6A6A6);
+    border: 1px solid var(--Gray-300, #a6a6a6);
     background-color: var(--_beige);
   }
 
