--- a/src/sass/blocks/stories.scss
+++ b/src/sass/blocks/stories.scss
@@ -107,7 +107,7 @@
 
     @include tablet {
       padding-left: 30px;
-
+      /* stylelint-disable-next-line */
       &::before {
         left: 11px;
       }
