--- a/src/sass/blocks/tour.scss
+++ b/src/sass/blocks/tour.scss
@@ -103,11 +103,11 @@
     }
 
     @include tablet {
+      /* stylelint-disable-next-line */
       &::after {
         bottom: -5px;
       }
     }
-
   }
 
   @media (any-hover: hover) {
