--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -10,7 +10,9 @@
 }
 
 .header__inner {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%), url("../../img/bg-header.jpg");
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%),
+    url("../img/bg-header.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
