Fixed the width of the title in the header, by adding a fixed width in the mobile app

--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -37,7 +37,7 @@
     padding-right: 20px;
     letter-spacing: 0.68px;
     max-width: 769px;
-    width: 100%;
+    width: 360px;
     color: var(--_basic-white);
     text-align: center;
   }
@@ -83,6 +83,7 @@
       line-height: 104px;
       letter-spacing: 1.92px;
       margin-bottom: 55px;
+      width: 100%;
     }
 
     p {
