--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -1,7 +1,9 @@
 // Button
 
 .button {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 10px 25px;
   font-size: 16px;
   font-weight: 400;
