--- a/src/sass/globals/reboot.scss
+++ b/src/sass/globals/reboot.scss
@@ -28,7 +28,8 @@ body {
 
 .title-content {
   p {
-    margin: 0;
+    width: 318px;
+    margin: 0 auto;
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
@@ -40,6 +41,7 @@ body {
     margin-bottom: 100px;
 
     p {
+      width: 100%;
       padding-left: 150px;
       padding-right: 150px;
       font-size: 20px;
