--- a/src/sass/blocks/connection.scss
+++ b/src/sass/blocks/connection.scss
@@ -33,22 +33,26 @@
 
 .connection__text {
   h2 {
-    margin: 0;
+    margin: 0 auto;
     margin-bottom: 20px;
     text-align: center;
     font-size: 23px;
     font-weight: 700;
     line-height: 27px;
     letter-spacing: 0.92px;
+    max-width: 300px;
+    padding: 0 10px;
   }
 
   p {
     text-align: center;
-    margin: 0;
+    margin: 0 auto;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     color: var(--_gray);
+    max-width: 340px;
+    padding: 0 10px;
   }
 
   a {
@@ -77,12 +81,17 @@
       font-weight: 500;
       line-height: 42px;
       letter-spacing: 0;
+      padding: 0;
+      max-width: 371px;
     }
 
     p {
       text-align: left;
       font-size: 20px;
       line-height: 28px;
+      padding: 0;
+      margin: 0;
+      max-width: 364px;
     }
 
     a {
