--- a/src/sass/blocks/gallery.scss
+++ b/src/sass/blocks/gallery.scss
@@ -38,7 +38,7 @@
 .gallery__inner {
   margin: 0 auto;
   padding: 0 21px;
-  max-width: 1920px;
+  width: 100vw;
 
   @include tablet {
     padding: 0 20px;
