--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import "./blocks/container.scss";
 @import "./blocks/header.scss";
 @import "./blocks/navigation.scss";
+@import "./blocks/hero.scss";
 @import "./blocks/tour.scss";
 @import "./blocks/form.scss";
 @import "./blocks/reviews.scss";
