fixed padding for header

--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -3,8 +3,7 @@
 .header {
   position: absolute;
   width: 100%;
-  padding: 20px;
-  padding-top: 33px;
+  padding: 33px 20px;
   min-height: 31px;
   color: var(--_basic-white);
   z-index: 11;
