--- a/src/sass/blocks/hero.scss
+++ b/src/sass/blocks/hero.scss
@@ -1,11 +1,7 @@
 .hero {
   position: relative;
   display: flex;
-  min-height: 488px;
-
-  @include tablet {
-    min-height: 831px;
-  }
+  height: 100vh;
 }
 
 .hero__inner {
